<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/temp_air_moisture"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/air_moisture"
        android:textColor="@color/blue"
        android:textSize="30sp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imageButton_setup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="2"
        android:contentDescription="@string/none"
        android:padding="7dp"
        android:src="@drawable/button_setup" />

    <TextView
        android:id="@+id/AM"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/control_way"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/toggle_AT"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:contentDescription="@string/none"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:src="@drawable/button_auto_manual" />

    <TextView
        android:id="@+id/enable"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/control_open_enable"
        android:textSize="16sp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/toggle_open_enable"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:contentDescription="@string/none"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:src="@drawable/button_auto_manual"
        android:visibility="gone" />

    <TextView
        android:id="@+id/maxTempValue"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/max_temp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/minTempValue"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/min_temp"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_startGT"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/net_disconnect"
        android:textColor="#000000"
        android:textSize="16sp" />

    <Button
        android:id="@+id/ven_mode"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/ven_mode_show"
        android:textColor="#000000"
        android:textSize="16sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/menu_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:singleLine="true"
        android:text="呼出菜单"
        android:textColor="#000000"
        android:textSize="16sp" />

</LinearLayout>