<?xml version="1.0" encoding="utf-8"?>
<com.smartfarm.view.CustomerScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/blue_tooth_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:visibility="gone"
            android:text="蓝牙id" />

        <ImageView
            android:id="@+id/debug_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:contentDescription="@null"
            android:src="@drawable/smartfarm_logo" />

        <TextView
            android:id="@+id/about_version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textColor="#9A9A9A"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/about_check_update"
            style="@style/option_item_rl"
            android:layout_marginTop="20dp" >

            <TextView
                style="@style/option_item_text_parent"
                android:text="@string/check_version"
                android:textColor="#000000"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="#DADADA" />

        <RelativeLayout
            android:id="@+id/about_new_version"
            style="@style/option_item_rl" >

            <TextView
                style="@style/option_item_text_parent"
                android:text="@string/query_version"
                android:textColor="#000000"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="#DADADA" />

        <RelativeLayout
            android:id="@+id/about_user_protocol"
            style="@style/option_item_rl" >

            <TextView
                style="@style/option_item_text_parent"
                android:text="@string/user_protocol"
                android:textColor="#000000"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="50dip"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dip" >

            <TextView
                android:id="@+id/about_oscsite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="@string/shztsite"
                android:textColor="#0083FF" />

            <View
                android:layout_width="2px"
                android:layout_height="fill_parent"
                android:layout_marginBottom="2dip"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="2dip"
                android:background="#000000" />

            <TextView
                android:id="@+id/about_knowmore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:text="@string/knowmore"
                android:textColor="#0083FF" />
        </LinearLayout>

        <TextView
            android:id="@+id/debug_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/copyright"
            android:textColor="#9A9A9A" />
    </LinearLayout>

</com.smartfarm.view.CustomerScrollView>